# andromeda-ng

./: Dockerfile  README.md  alembic.ini  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2095e591a35a_leads.py  296e31d1eb72_i_think_this_mode_will_work.py  2a589b90409d_changed_customer_status_to_bool.py  837849ca4001_create_leads_table.py  837d75fd6fd1_stuff.py  853edcfc4911_this_should_have_worked.py  9cc52e7be69f_note.py  ac94931e3ea4_create_leads_table.py  c7403cba2adb_create_users_table.py  d0b50deb01f2_stuff.py  e45049d67530_leads_2.py  f88d015b7b28_leads.py
andromeda_ng/: app.py
andromeda_ng/service/: database.py  ping.py  schema.py  settings.py
andromeda_ng/service/api/routes/: auth_controller.py  contact_controller.py  customers_controller.py  leads.py  leads_controller.py  notes_controller.py  users_controller.py
andromeda_ng/service/crud/: contact_service.py  customer_service.py  lead_service.py  note_service.py  user_service.py
andromeda_ng/service/libs/: auth.py  email.py  zammad.py
andromeda_ng/service/libs/templates/: password_reset.html
andromeda_ng/service/models/: __init__.py  customer.py  leads.py  note.py  user.py
andromeda_ng/service/utils/: opentelemetry_instrumentation_loguru.py  passwords.py  telemetry.py
service/: database.py  settings.py
tests/:  configtest.py  conftest.py  test_lead_crud.py  test_leads.py
