[tool.poetry]
name = "andromeda-ng"
version = "0.1.0"
description = "Api Backend for Andromeda Crm"
authors = ["Ryan Jones"]
license = "GPL V3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
sqlalchemy = "^2.0.38"
fastapi-sqlalchemy = "^0.2.1"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
