[tool.poetry]
name = "andromeda-ng"
version = "0.1.0"
description = "Api Backend for Andromeda Crm"
authors = ["Ryan Jones"]
license = "GPL V3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
sqlalchemy = "^2.0.38"
fastapi-sqlalchemy = "^0.2.1"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.20"
password-validation = "^0.1.1"
jinja2 = "^3.1.5"
fastapi-mail = "^1.4.2"
zammad-py = "^3.0.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.30.0"
opentelemetry-instrumentation = "^0.51b0"
opentelemetry-instrumentation-fastapi = "^0.51b0"
opentelemetry-instrumentation-logging = "^0.51b0"
opentelemetry-instrumentation-sqlalchemy = "^0.51b0"
opentelemetry-instrumentation-httpx = "^0.51b0"
opentelemetry-instrumentation-requests = "^0.51b0"



[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

